<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >


    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/home" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageButton3"
        android:layout_marginRight="43dp"
        android:src="@drawable/not_taken" 
        android:onClick="onNotTakenButtonClick"/>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/imageButton4"
        android:onClick="onAlarmButtonClick"
        android:src="@drawable/snooze" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_marginLeft="16dp"
        android:text="@string/took"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton1"
        android:layout_centerHorizontal="true"
        android:text="@string/takeoption"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button1"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/pill_cam" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageButton4"
        android:layout_below="@+id/imageButton4"
        android:text="@string/nottaken"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageButton1"
        android:layout_below="@+id/imageButton1"
        android:text="@string/pillcam"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="35dp"
        android:src="@drawable/took"
        android:onClick="onTookButtonClick" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton3"
        android:layout_toLeftOf="@+id/button1"
        android:text="@string/snooze"
        android:textSize="20sp" />

</RelativeLayout>